# fe

./: CLI.md  Cargo.toml  README.md  fib_demo.fe
crates/codegen/: Cargo.toml
crates/codegen/src/: debug.rs  function_symbols.rs  lib.rs  shape.rs  trace.rs
crates/common/: Cargo.toml
crates/common/src/: facts.rs  lib.rs  origin.rs  shape.rs  source.rs
crates/common/tests/: origin_compile.rs
crates/common/tests/ui/: origin_export_key_raw_strings.rs  origin_export_key_raw_strings.stderr
crates/debug-export/: Cargo.toml
crates/debug-export/src/: dwarf.rs  ethdebug.rs  lib.rs  model.rs
crates/fe/: Cargo.toml  build.rs
crates/fe/src/: analyze.rs  doc.rs  main.rs  shape_cli.rs  trace.rs
crates/fe/src/trace/: trace_cli.rs  trace_emit.rs  trace_fixture.rs  trace_live.rs  trace_render.rs
crates/hir/: Cargo.toml
crates/hir/src/: lib.rs  origin.rs  shape.rs  trace.rs
crates/hir/tests/: origin_compile.rs  origin_export.rs
crates/hir/tests/ui/: hir_origin_export_key_raw_strings.rs  hir_origin_export_key_raw_strings.stderr  hir_origin_expr_stmt_mismatch.rs  hir_origin_expr_stmt_mismatch.stderr
crates/introspection-config/: Cargo.toml
crates/introspection-config/src/: lib.rs
crates/language-server/: Cargo.toml
crates/language-server/src/: combined_server.rs  introspection.rs  lib.rs  server.rs
crates/language-server/src/backend/: mod.rs
crates/language-server/src/functionality/: capabilities.rs  code_lens.rs  codegen_view.rs  handlers.rs  hover.rs  inlay_hints.rs
crates/mir/: Cargo.toml
crates/mir/src/: lib.rs  origin.rs  shape.rs  trace.rs
crates/mir/src/runtime/: package.rs  stable_key.rs
crates/mir/tests/: origin_compile.rs  origin_export.rs  origin_facts.rs
crates/mir/tests/ui/: runtime_origin_export_key_raw_strings.rs  runtime_origin_export_key_raw_strings.stderr  runtime_origin_stmt_terminator_mismatch.rs  runtime_origin_stmt_terminator_mismatch.stderr
crates/shape-address/: Cargo.toml  SPEC.md  golden-fixtures.json
crates/shape-address/src/: lib.rs
crates/trace-facts/: Cargo.toml
crates/trace-facts/src/: evm_trace.rs  fact.rs  jsonl.rs  lib.rs  relation.rs  snapshot.rs  validate.rs
crates/trace-query/: Cargo.toml
crates/trace-query/src/: datalog_emit.rs  lib.rs
