[package]
name = "fe-debug-export"
version = "26.1.0"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/argotorg/fe"
description = "Derived debug/export model over validated Fe trace facts."

[lib]
doctest = false

[dependencies]
common.workspace = true
serde = { version = "1.0", features = ["derive"] }
trace-facts.workspace = true
