[package]
name = "fe-introspection-config"
version = "26.1.0"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/argotorg/fe"
description = "Shared Fe tooling and introspection configuration"

[dependencies]
blake3.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
toml = "0.8.8"
