[package]
name = "fe-mir"
version = "26.1.0"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/argotorg/fe"
description = "Semantic/runtime MIR v2 architecture for Fe"

[lib]
doctest = false

[dependencies]
common.workspace = true
dataflow.workspace = true
hir.workspace = true
shape-address.workspace = true
trace-facts.workspace = true
cranelift-entity.workspace = true
rustc-hash.workspace = true
blake3.workspace = true
salsa.workspace = true
num-bigint.workspace = true
num-traits.workspace = true

[dev-dependencies]
driver.workspace = true
trybuild = "1.0"
url.workspace = true
