[package]
name = "fe-trace-facts"
version = "26.1.0"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/argotorg/fe"
description = "Typed trace fact stream for Fe compiler diagnostics."

[lib]
doctest = false

[dependencies]
common.workspace = true
shape-address.workspace = true
blake3.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
