[package]
name = "fe-trace-query"
version = "26.1.0"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/argotorg/fe"
description = "Read-only trace introspection queries for Fe compiler diagnostics."

[dependencies]
common.workspace = true
introspection-config.workspace = true
serde = { version = "1.0", features = ["derive"] }
trace-facts.workspace = true

[dev-dependencies]
serde_json = "1.0"
